<resources>
    <string name="app_name">LoverSpace</string>
    <string name="return_login">返回登录界面</string>
    <string name="input_phone">请输入电话号码</string>
    <string name="input_password">请输入密码</string>
    <string name="next_step">下一步</string>
    <string name="verify_phone">手机号验证</string>
    <string name="register_phone">手机号注册</string>
    <string name="send_code_succeed">验证码已发送至</string>
    <string name="get_code_again">重新获取</string>
    <string name="user_info">用户信息</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="input_username">你的手机号或邮箱</string>
    <string name="input_address">输入地址</string>
    <string name="input_birthday">输入生日</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="our_moment">Our Moment</string>

</resources>
